added tab4, added nav to tab3, added master.css to global scss

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -24,7 +24,7 @@
         <div class="wdac-flex">
           <input type="tel" pattern="[0-9-]*" name="phoneNumber" formControlName="phoneNumber" class="wdac-input cd-margin-right"  placeholder="Phone (#s only)*" />
 
-          <button (click)="sendInitialMessageUi()" class="wdac-text-lowercase wdac-button">Start Chat</button>
+          <button (click)="nextTab3(':cardId/tab4')" class="wdac-text-lowercase wdac-button">Start Chat</button>
         </div>
       </form>
     </ion-row>
