some changes due to split

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,7 +10,7 @@
       <a class="wdac-text-white">Step 1 of 3</a>
     </div>
     <figure class="cd-avatar">
-      <img src="../assets/who-is-david-kley-sm.jpg" alt="Dave" />
+      <img src="./assets/who-is-david-kley-sm.jpg" alt="Dave" />
     </figure>
   </div>
   <ion-grid>
