--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,7 +9,7 @@
       <a class="wdac-text-white">Step 2 of 3</a>
     </div>
     <figure class="cd-avatar">
-      <img src="../assets/who-is-david-kley-sm.jpg" alt="Dave Kley" />
+      <img src="./assets/who-is-david-kley-sm.jpg" alt="Dave Kley" />
     </figure>
   </div>
   <ion-grid>
