--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -10,7 +10,7 @@
       <a class="wdac-text-white">Step 3 of 3</a>
     </div>
     <figure class="cd-avatar">
-      <img src="https://carddate.com/demo/media/avatar.jpg" alt="Charlotte" />
+      <img src="./assets/who-is-david-kley-sm.jpg" alt="Charlotte" />
     </figure>
   </div>
   <ion-grid class="margin-for-words">
